app/styles/classification.scss
.classification-report .editing-form .typeid {
	width: 6%;
	padding-left: 1%;
}
.classification-report .editing-form .description {
	width: 54%;
}
.classification-report .editing-form .acceptability {
	width: 22%;
}
.classification-report .editing-form .rolegroup {
	width: 2.5%;
	padding-left: 0px;
}
.classification-report .editing-form .is_a {
	width: 25.5%;
	padding-left: .25%;
}
.classification-report .editing-form .sourcename {
	width: 60%;
	padding-left: .25%;
}
.classification-report {
	border-bottom: #ddd solid 2px;
	background-color: #fafafa;
	margin-top: 5px;
	border-top: 1px solid #F0F0F0;
}
.classification-report .nav-tabs li a {
	padding: 10px 15px;
}
.classification-header {
	padding-bottom: 8px;
	padding-top: 2px;
	max-height: 48px;
}
.classification-header p {
	margin: 0px;
}
.classification-report .nav-tabs > li {
	width: 25%;
	text-align: center;
}
.classification-header button.md-keyboard-arrow-down:hover, .classification-header button.md-keyboard-arrow-up:hover, .classification-header button.md-keyboard-arrow-down:active, .classification-header button.md-keyboard-arrow-up:active, .classification-header button.md-keyboard-arrow-down:focus, .classification-header button.md-keyboard-arrow-up:focus {
	background-color: transparent!important;
	color: #2d7130!important;
}
.classification-report .button-width {
    width: 3%;}
	.classification-report .button-width-acceptability {
    width: 5%;}
	.classification-report .editing-form .description {
    width: 70%;
}

.classification-report .concept-headers .col-md-1 {
    width: 4.33333%;
}

.classification-report .concept-headers .col-md-6 {
    width: 60%;
}

.classification-report .editing-form .is_a {
    width: 27%;
    padding-left: .25%;
}

